# halodesk

./: .gitignore  PRD.md  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
scripts/: dev-tauri.cmd
src/: app.d.ts  app.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: capture.rs  config.rs  logger.rs  main.rs  models.rs  router.rs  storage.rs
src/routes/: +page.svelte
