[package]
name = "halodesk"
version = "0.1.0"
description = "HaloDesk + HaloRouter"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
anyhow = "1.0"
tauri = { version = "1.5", features = [ "global-shortcut-all", "clipboard-all", "window-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["rt-multi-thread", "macros"] }
axum = { version = "0.7", features = ["macros", "json"] }
tower-http = { version = "0.5", features = ["cors"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
rusqlite = { version = "0.31", features = ["bundled"] }
keyring = "2.3"
uuid = { version = "1.8", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
tokio-stream = "0.1"
async-stream = "0.3"
thiserror = "1.0"
screenshots = "0.8"

[features]
# Required by Tauri for production builds and when using the local protocol.
custom-protocol = ["tauri/custom-protocol"]
